--- a/Guiao02/Exercicio03/CMakeLists.txt
+++ b/Guiao02/Exercicio03/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Exercicio03 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Exercicio03 main.c)
+add_executable(Exercicio03 main.c ponto.c ponto.h retangulo.c retangulo.h)
